# pwr-quantum-computing-2026

./: AGENTS.md  pyproject.toml  requirements.txt
.mpl-cache/: fontlist-v390.json
assignments/lab_1/: Alicja_Jedlinska_lab_1.ipynb  Blazej_Zdobylak_lab_1.ipynb  Kamil_Wrzos_lab_1.ipynb  julia_koczorowska_lab1.ipynb  lab1_numpy_quantum_states_student.ipynb  szymon_drogos_lab_1.ipynb
assignments/lab_2/: lab2_quantum_advantage_audit.ipynb  lab2_quantum_advantage_audit_student.ipynb
assignments/lab_3/: lab3_quantum_fourier_transform.ipynb
assignments/lab_4/: lab4_quantum_amplitude_estimation.ipynb
assignments/lab_intro/: szymon_drogos_lab_intro.ipynb
fatigue_assessment/: Bridge_Fatigue.ipynb  Bridge_Fatigue_MonteCarlo_InputData.csv  Bridge_Fatigue_MonteCarlo_InputData.xlsx
guidelines/: README.md  notebook_generation_common.md  notebook_generation_labs.md  notebook_generation_lectures.md
lectures/06_qpe/: 01_three_qubit_qft_intuition.ipynb
lectures/07_qaoa/: qaoa_maxcut_minimal_numpy.ipynb
lectures/08_qml/: 00_ml_basics.ipynb  01_ml_feature_maps_and_kerners.ipynb  02_ml_vqc.ipynb  03_hhl.ipynb  04_quanvolution.ipynb  05_quantum_gradients.ipynb
projects/: assignment_1.md  assignment_2.md  assignment_3.md
workshops/: generate_workshop_notebooks.py  generate_workshop_solutions.py  team_a_qpe_molecular_spectrum.ipynb  team_a_qpe_molecular_spectrum.md  team_a_qpe_molecular_spectrum_solution.ipynb  team_b_translation_symmetry_order_finding.ipynb  team_b_translation_symmetry_order_finding.md  team_b_translation_symmetry_order_finding_solution.ipynb
(+5 files in other folders)
