[project]
name = "pwr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pennylane>=0.42.3",
    "pip>=26.0.1",
    "pylatexenc>=2.10",
    "python-dotenv>=1.2.2",
    "qiskit>=2.3.0",
    "qiskit-aer>=0.17.1",
    "qiskit-algorithms>=0.4.0",
    "qiskit-ibm-runtime>=0.46.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "torch>=2.12.0",
]
